# Easymic

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE.txt  README.md
src/: AppConfig.hpp  AudioManager.hpp  HotkeyManager.h  HotkeyManager.hpp  Utils.hpp  config.h  config.hpp  definitions.h  main.cpp  main.hpp
src/Audio/: AudioDeviceController.hpp  AudioFileValidator.hpp  AudioManager.hpp  SessionEvents.h  SessionEvents.hpp  SessionNotification.h  SessionNotification.hpp  VolumeNotification.hpp
src/Audio/EventHandlers/: AudioDeviceEventsHandler.hpp  SessionCreateEventsHandler.hpp  SessionStateEventsHandler.hpp  VolumeEventsHandler.hpp
src/Lib/: CrashHandler.cpp  CrashHandler.hpp  Event.hpp  HotkeyManager.cpp  HotkeyManager.hpp  Logger.cpp  Logger.hpp  RateLimiter.hpp  Resource.hpp  UACService.cpp  UACService.hpp  UpdateManager.cpp  UpdateManager.hpp  Utils.hpp  Version.cpp  Version.hpp  Win32Hook.hpp
src/Lib/UIAccess/: UIAccessManager.cpp  UIAccessManager.hpp  shellcode.asm
src/Resources/: Resource.h  Resource.rc  SettingsWindow.rc  app.manifest
src/View/: AbstractWindow.h  AbstractWindow.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  SettingsWindow.h  SettingsWindow.hpp
src/View/Components/: GdiRenderer.hpp  LayeredWindow.hpp  TrayIcon.hpp
src/View/Core/: BaseWindow.hpp  WindowRegistry.hpp
src/View/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/View/SettingsWindow/: SettingsWindow.cpp  SettingsWindow.hpp
src/ViewModel/: BaseViewModel.hpp  MainWindowViewModel.hpp  SettingsWindowViewModel.cpp  SettingsWindowViewModel.hpp  ViewModel.hpp
